<?xml version="1.0" encoding="utf-8"?>

<!-- He cambiado a LinearLayout por ser más simple ya que solo voy a apilar botones -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_to_metodo_xml"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/metodo_xml" />

    <!-- El mismo elemento, pero de las librerías de Material Design -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_listener_personalizado"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/listener_personalizado" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_listener_personalizado_inner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/listener_personalizado_inner" />

    <Button
        android:id="@+id/btn_to_clase_anonima"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/clase_an_nima" />

    <!-- El mismo elemento, pero de las librerías de Material Design -->
    <Button
        android:id="@+id/btn_to_lambda"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/lambda" />

    <Button
        android:id="@+id/btn_to_activity_listener"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_como_listener" />

</LinearLayout>